[package]
readme = "README.md"
name = "hl7v2-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HTTP/REST API server for HL7v2 message processing"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Local crates
hl7v2-core = { version = "1.2.0", path = "../hl7v2-core", features = ["network"] }
hl7v2-prof = { version = "1.2.0", path = "../hl7v2-prof" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
tower = { workspace = true, features = ["limit"] }
tower-http = { workspace = true, features = ["trace", "cors", "compression-gzip"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tower_governor = { workspace = true }
governor = "0.8"
serde_yaml = { workspace = true }

# Additional dependencies
http = "1.0"
hyper = "1.0"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa = { version = "5.4", features = ["yaml"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
cucumber = "0.22.1"
serde_json = { workspace = true }
uselesskey = { workspace = true }

[[test]]
name = "bdd_tests"
harness = false

[[bin]]
name = "hl7v2-server"
path = "src/main.rs"

