[package]
readme = "README.md"
name = "hl7v2-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Streaming/event-based parser for HL7 v2 messages"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core model types
hl7v2-model = { version = "1.2.0", path = "../hl7v2-model" }

# Async runtime for bounded channels
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
# Test utilities
hl7v2-test-utils = { version = "1.2.0", path = "../hl7v2-test-utils" }
hl7v2-parser = { version = "1.2.0", path = "../hl7v2-parser" }

# Property-based testing
proptest = "1.6"

# Async runtime for streaming tests
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread", "sync", "time"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "streaming"
harness = false

