[package]
name = "hl7v2-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 template-based message generation"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hl7v2-model = { path = "../hl7v2-model" }
hl7v2-core = { path = "../hl7v2-core" }
hl7v2-template-values = { path = "../hl7v2-template-values" }
hl7v2-corpus = { path = "../hl7v2-corpus" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.10.0"
sha2 = "0.10.9"


[dev-dependencies]
