[package]
name = "hl7v2-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core HL7 v2 parsing and model
hl7v2-core = { path = "../hl7v2-core" }
hl7v2-model = { path = "../hl7v2-model" }

# Serialization
serde = { workspace = true, features = ["derive"] }

# Regular expressions for pattern validation
regex = "1.12.3"

# Date/time handling for temporal validation
chrono = { version = "0.4.44", features = ["serde", "std", "clock"], default-features = false }

[dev-dependencies]
# Testing utilities
