[package]
readme = "README.md"
name = "hl7v2-writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HL7 v2 message writer/serializer"
license.workspace = true
repository.workspace = true
keywords = ["hl7", "healthcare", "serializer", "writer"]
categories = ["encoding", "parser-implementations"]

[dependencies]
hl7v2-model = { version = "1.2.0", path = "../hl7v2-model" }
hl7v2-escape = { version = "1.2.0", path = "../hl7v2-escape" }
hl7v2-mllp = { version = "1.2.0", path = "../hl7v2-mllp" }
hl7v2-json = { version = "1.2.0", path = "../hl7v2-json" }

[dev-dependencies]
hl7v2-parser = { path = "../hl7v2-parser" }
hl7v2-test-utils = { path = "../hl7v2-test-utils" }
proptest = "1.6"
serde_json = "1.0"

